# omr

cmake/: config.cmake
compiler/: CMakeLists.txt
compiler/aarch64/codegen/: OMRTreeEvaluatorTable.hpp
compiler/codegen/: CMakeLists.txt  OMRAheadOfTimeCompile.cpp  OMRAheadOfTimeCompile.hpp  OMRCodeGenerator.cpp  OMRELFGenerator.cpp  OMRELFGenerator.hpp  Relocation.cpp
compiler/compile/: OMRCompilation.hpp  ResolvedMethod.cpp
compiler/control/: CompileMethod.cpp
compiler/elfso/: CMakeLists.txt  OMRELFLoader.cpp  OMRELFLoader.hpp
compiler/elfso/codegen/: CMakeLists.txt  ELFGenerator.hpp  ELFSharedStorageGenerator.cpp  ELFSharedStorageGenerator.hpp
compiler/elfso/env/: AOTAdapter.hpp  AOTLoadStoreDriver.hpp  AOTMethodHeader.hpp  AOTStorage.hpp  AOTStorageInterface.hpp  CMakeLists.txt  ELFAdapter.cpp  ELFAdapter.hpp  ELFMethodHeader.cpp  ELFMethodHeader.hpp
compiler/env/: AOTAdapter.hpp  AOTLoadStoreDriver.hpp  AOTMethodHeader.hpp  AOTStorage.hpp  AOTStorageInterface.hpp  CMakeLists.txt  FEBase_t.hpp  OMRAOTAdapter.cpp  OMRAOTAdapter.hpp  OMRAOTLoadStoreDriver.cpp  OMRAOTLoadStoreDriver.hpp  OMRAOTMethodHeader.cpp  OMRAOTMethodHeader.hpp  OMRAOTStorage.cpp  OMRAOTStorage.hpp  OMRAOTStorageInterface.cpp  OMRAOTStorageInterface.hpp  OMRCompilerEnv.hpp  TRMemory.cpp  TRMemory.hpp
compiler/ilgen/: OMRIlBuilder.cpp  OMRIlBuilder.hpp  OMRMethodBuilder.cpp  OMRVirtualMachineOperandStack.cpp
compiler/runtime/: AOTRelocationRuntime.hpp  CMakeLists.txt  OMRAOTRelocationRuntime.cpp  OMRAOTRelocationRuntime.hpp  OMRCodeCacheManager.cpp  OMRRelocationRecord.cpp  OMRRelocationRecord.hpp  OMRRelocationRuntime.cpp  OMRRelocationRuntime.hpp  OMRRelocationTarget.cpp  OMRRelocationTarget.hpp  Runtime.hpp  TRRelocationRecord.hpp  TRRelocationRuntime.hpp  TRRelocationTarget.hpp
compiler/x/: CMakeLists.txt
compiler/x/amd64/codegen/: AMD64SystemLinkage.cpp
compiler/x/codegen/: ControlFlowEvaluator.cpp  OMRAheadOfTimeCompile.cpp  OMRAheadOfTimeCompile.hpp  OMRTreeEvaluator.cpp  X86BinaryEncoding.cpp
compiler/z/codegen/: OMRCodeGenerator.cpp  OMRInstruction.cpp
include_core/: omrcfg.cmake.h.in  omrmemcategories.h  omrport.h
jitbuilder/: CMakeLists.txt
jitbuilder/apigen/: jitbuilder.api.json
jitbuilder/control/: Jit.cpp
jitbuilder/release/: CMakeLists.txt
jitbuilder/release/cpp/samples/: BytecodeBuilderInlining.cpp  BytecodeBuilderInlining.hpp
port/: CMakeLists.txt
port/unix/: omrfile.c
